--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Web Controller</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
-    <h1>Receiving Page</h1>
-    <p> Testing to make sure page is delivered</p>
+    <div name="navBar">
+      <h1> Spotify Controller </h1>
+    </div>
+
+    <form method="get" action="/login">
+      <button type="submit">Link your Spotify Account</button>
+    </form>
 
 
     <link rel="stylesheet" type="text/css" href="/css/mainStyles.css">
